--- a/algebra_assignment_3.tex
+++ b/algebra_assignment_3.tex
@@ -221,30 +221,6 @@
   \item
     $Ext_{k[x]}^i(k[x]/(x^n), k[x]/(x^m))$:
     
-    We compute a projective resolution of $k[x]/(x^n)$:
-    \begin{align*}
-      0 \xrightarrow{0} k[x] \xrightarrow{x^n} k[x] \xrightarrow{\pi_{(x^n)}} k[x]/(x^n) \xrightarrow{0} 0  
-    \end{align*}
-    and drop the second last term and apply $Hom(-, k[x]/(x^m))$ to get
-    \begin{align*}
-      0 \xrightarrow{0} hom(k[x],k[x]/(x^m)) \xrightarrow{x^n_*} hom(k[x], k[x]/(x^m)) \xrightarrow{0} 0.
-    \end{align*}
-    Since $\varphi: k[x] \to k[x]/(x^m)$ is fully determined by $\varphi(x) \in k[x]/(x^m)$, we have 
-    \begin{align*}
-      \hom(k[x],k[x]/(x^m)) \cong k[x]/(x^m),
-    \end{align*}
-    and so the last sequence is the same as
-    \begin{align*}
-      0 \xrightarrow{0} k[x]/(x^m) \xrightarrow{x^n} k[x]/(x^m) \xrightarrow{0} 0,
-    \end{align*}
-    which yields
-    \begin{align*}
-      Ext_{k[x]}^0 = \ker(x^n) = k[x]x^{m-n}/k[x]x^m
-    \end{align*}
-    and
-    \begin{align*}
-      Ext_{k[x]}^1 &= \ker(0)/\im(x^n) \\
-      &= (k[x]/k[x]x^m)/(k[x]x^n/k[x]x^m) \\
       &\cong k[x]/k[x]x^n
     \end{align*}
   \item
@@ -293,9 +269,9 @@
   \begin{align*}
     0 \to \Z \xrightarrow{p^n} \Z \xrightarrow{\pi_{p^n}} \Z/p^n\Z \xrightarrow{0} 0 
   \end{align*}
-  and then apply $\hom(-, \Z^m)$ to get
+  and then apply $\hom(-, \Z/p^m\Z)$ to get
   \begin{align*}
-    0 \xrightarrow{0} \hom(\Z, p^m\Z) \xrightarrow{p^n_*} \hom(\Z, p^m\Z) \xrightarrow{0} 0
+    0 \xrightarrow{0} \hom(\Z, \Z/p^m\Z) \xrightarrow{p^n_*} \hom(\Z, \Z/p^m\Z) \xrightarrow{0} 0
   \end{align*}
   which is the same as
   \begin{align*}
@@ -304,8 +280,12 @@
   We have
   \begin{align*}
     Ext_{\Z}^0(\Z/p^n\Z, \Z/p^m\Z)
-    &= \ker(p^n) \\
-    &= p^{m-n}\Z/p^m\Z 
+    &= \ker(p^n)/\im(0) \\
+    &= 
+    \begin{cases}
+      \text{ if } n<m & p^{m-n}\Z/ p^m \Z \\
+      \text{ otherwise } & \Z / p^m \Z
+    \end{cases}
   \end{align*}
   and
   \begin{align*}
@@ -331,7 +311,11 @@
   \end{align*}
   Thus, in this case we have the same result as in the previous case
   \begin{align*}
-    Tor_{\Z}^0(\Z/p^n\Z, \Z/p^m\Z) = p^{m-n}\Z/p^m\Z
+    Tor_{\Z}^0(\Z/p^n\Z, \Z/p^m\Z) =
+    \begin{cases}
+      \text{ if } n<m & p^{m-n}\Z/ p^m \Z \\
+      \text{ otherwise } & \Z / p^m \Z
+    \end{cases}
   \end{align*}
   and
   \begin{align*}
@@ -369,7 +353,7 @@
   We also have that $Ext_{\Z}^i(\Z^r, \bigoplus \Z/q_j^{l_j}\Z) = 0$ for $i=0,1$, since
   \begin{align*}
     Ext_{\Z}^i(\Z^r, \bigoplus \Z/q_j^{l_j}\Z)
-    &= Ext_{\Z}^i(\Z, \bigoplus \Z/q_j^{l_j}\Z)^r \\
+    &= (Ext_{\Z}^i(\Z, \bigoplus \Z/q_j^{l_j}\Z))^r \\
     &= (\bigoplus Ext_{\Z}^i(\Z,\Z/q_j^{l_j}\Z))^r.
   \end{align*}
   We have the following projective resolution of $\Z$:
@@ -393,13 +377,164 @@
     Ext_{\Z}^i(\Z^r, \bigoplus \Z/q_j^{l_j}\Z) = 0.
   \end{align*}
 
-  Next, we have that $Ext(\bigoplus \Z/p_j^{r_j} \Z, \Z^)$
+  Next, we have that $Ext(\bigoplus \Z/p_j^{r_j} \Z, \Z^l) =\bigoplus Ext( \Z/p_j^{r_j} \Z, \Z^l) = 0$, since for the projective resolution
+  \begin{align*}
+    0 \xrightarrow{0} \Z \xrightarrow{p_j^{r_j}} \Z \xrightarrow{\pi_{p_j^{r_j}}} \Z / p_j^{r_j} \Z \xrightarrow{0} 0 
+  \end{align*}
+  which we turn into 
+  \begin{align*}
+    0 \xrightarrow{0} \hom(\Z, \Z^l) \xrightarrow{p_j^{r_j}_*} \hom(\Z, \Z^l) \xrightarrow{0} 0 
+  \end{align*}
+  which is equivalent to
+  \begin{align*}
+    0 \xrightarrow{0} \Z^l \xrightarrow{p_j^{r_j}} \Z^l \xrightarrow{0} 0;
+  \end{align*}
+  and so
+  \begin{align*}
+    Ext_{\Z}^0(\Z/p_j^{r_j} \Z, \Z^l)
+    &= \ker(p_j^{r_j})/\im(0) \\
+    &= 0
+  \end{align*}
+  and
+  \begin{align*}
+    Ext_{\Z}^1(\Z/p_j^{r_j} \Z, \Z^l)
+    &= \ker(0)/\im(p_j^{r_j}) \\
+    &= \Z^l/\Z^l \\
+    &= 0 
+  \end{align*}
+
+  Thus,
+  \begin{align*}
+    &Ext_{\Z}^i(\Z^r \oplus \bigoplus\limits_{j=1}^n \Z/p_j^{r_j}\Z, \Z^l
+    \oplus \bigoplus\limits_{j=1}^n \Z/q_j^{l_j}\Z) \\
+    &= Ext_{\Z}^i(\bigoplus\limits_{j=1}^n \Z/p_j^{r_j}\Z,\bigoplus\limits_{j=1}^n \Z/q_j^{l_j}\Z) \\
+    &= \bigoplus\limits_{i,j}^{n.m} Ext_{\Z}^i( \Z/p_j^{r_j}\Z, \Z/q_j^{l_j}\Z).
+  \end{align*}
+
+  Now, if $p_i \neq q_j$ then
+  \begin{align*}
+    Ext_{\Z}^i( \Z/p_j^{r_j}\Z, \Z/q_j^{l_j}\Z) = 0,
+  \end{align*}
+  since for the following projective resolution of $\Z/p_j^{r_j}\Z$:
+  \begin{align*}
+    0 \xrightarrow{0} \Z \xrightarrow{p_i^{r_i}} \Z \xrightarrow{\pi_{p_i^{r_i}}} \Z/p_i^{r_i}\Z \xrightarrow{0} 0
+  \end{align*}
+  we have
+  \begin{align*}
+    0 \xrightarrow{0} \hom_{\Z}(\Z, \Z/q_j^s_j\Z) \xrightarrow{p_i^{r_i}} \hom_{\Z}(\Z, \Z/q_j^s_j\Z) \xrightarrow{0} 0
+  \end{align*}
+  which is equivalent to
+  \begin{align*}
+    0 \xrightarrow{0} \Z/q_j^s_j\Z \xrightarrow{p_i^{r_i}} \Z/q_j^s_j\Z \xrightarrow{0} 0 .
+  \end{align*}
+  Thus, we find just searching out the homology functors that since $p_i^{r_i}$ and $q_j^{s_j}$ are coprime that
+  \begin{align*}
+    H_0 = ker(p_i^{r_i})/im(0) = 0/0 = 0
+  \end{align*}
+  and
+  \begin{align*}
+    H_1 = ker(0)/im(0) = (\Z/q_j^{s_j}\Z)/(\Z/q_j^{s_j}) = 0.
+  \end{align*}
+
+  Hence, after a reindexing of terms we have that
+  \begin{align*}
+    &Ext_{\Z}^i(\Z^r \oplus \bigoplus\limits_{j=1}^n \Z/p_j^{r_j}\Z, \Z^l
+    \oplus \bigoplus\limits_{j=1}^n \Z/q_j^{l_j}\Z) \\
+    &= \bigoplus\limits_{j}^{n} Ext_{\Z}^i( \Z/p_j^{r_j}\Z, \Z/q_j^{l_j}\Z).
+  \end{align*}
+  Thus,
+  \begin{align*}
+    &Ext_{\Z}^0(\Z^r \oplus \bigoplus\limits_{j=1}^n \Z/p_j^{r_j}\Z, \Z^l
+    \oplus \bigoplus\limits_{j=1}^n \Z/q_j^{l_j}\Z) \\
+    &= \bigoplus\limits_{j}^{n}  p_j^{r_j-s_j}\Z/p_j^{r_j} \Z
+  \end{align*}
+  and
+  \begin{align*}
+    &Ext_{\Z}^1(\Z^r \oplus \bigoplus\limits_{j=1}^n \Z/p_j^{r_j}\Z, \Z^l
+    \oplus \bigoplus\limits_{j=1}^n \Z/q_j^{l_j}\Z) \\
+    &= \bigoplus\limits_{j}^{n} M_j,
+  \end{align*}
+  where
+  \begin{align*}
+    M_j =
+    \begin{cases}
+      \text { if } r_j < s_j & \Z/p_j^{r_j} \Z \\
+      \text { otherwise} & \Z/p_j^{s_j} \Z 
+    \end{cases}
+  \end{align*}
   
   
   The Tor functor preserves direct sums in the first argument and so we get
   \begin{align*}
-    Tor_{\Z}^i(\Z^r \oplus \bigoplus\limits_{j=1}^n \Z/p_j^{r_j}\Z, \Z/p_k^s\Z) 
-    &= Tor_{\Z}^i(\Z, \Z/p_j^s\Z)^r \oplus \bigoplus\limits_{j=1}^n Tor_{\Z}^i(\Z/p_j^{r_j}\Z, \Z/p_k^s\Z)
+    Tor_{\Z}^i(\Z^r \oplus \bigoplus\limits_{j=1}^n \Z/p_j^{r_j}\Z, \Z/q^s\Z) 
+    &= Tor_{\Z}^i(\Z, \Z/q^s\Z)^r \oplus \bigoplus\limits_{j=1}^n Tor_{\Z}^i(\Z/p_j^{r_j}\Z, \Z/q^s\Z)
+  \end{align*}
+  We have the following projective resolution of $\Z$
+  \begin{align*}
+    0 \xrightarrow{0} \Z \xrightarrow{id} \Z \xrightarrow{id} \Z \xrightarrow{0} 0
+  \end{align*}
+  to which we apply $(-) \otimes_{\Z} (\Z/q^s\Z)$ to get
+  \begin{align*}
+    0 \xrightarrow{0_*} \Z \otimes_{\Z} (\Z/q^s\Z) \xrightarrow{id_*} \Z \otimes_{\Z} (\Z/q^s\Z) \xrightarrow{0_*} 0    
+  \end{align*}
+  which is equal to 
+  \begin{align*}
+    0 \xrightarrow{0} \Z/q^s\Z \xrightarrow{id} \Z/q^s\Z \xrightarrow{0} 0.
+  \end{align*}
+  From which we get
+  \begin{align*}
+    Tor_{\Z}^0(\Z, \Z/q^s\Z) = \ker(id)/\im(0) = 0
+  \end{align*}
+  and
+  \begin{align*}
+    Tor_{\Z}^1(\Z, \Z/q^s\Z) = \ker(0)/\im(id) = (\Z/q^s\Z)/(\Z/q^s\Z) = 0    
+  \end{align*}
+  Now, if $p \neq q$, then $p^{r_j}$ and $q^s$ are coprime. We have the following projective resolution of $\Z/p_j^{r_j}\Z$:
+  \begin{align*}
+    0 \xrightarrow{0} \Z \xrightarrow{p_j^{r_j}} \Z \xrightarrow{\pi_{p_j^{r_j}}} \Z/p_j^{r_j}\Z \xrightarrow{0} 0,
+  \end{align*}
+  to which we apply $(-) \otimes_{\Z} (\Z/q^s \Z)$ (while remembering to drop the $\Z/p_j^{r_j}\Z$ term), to get
+  \begin{align*}
+    0 \xrightarrow{0_*} \Z \otimes_{\Z} (\Z/q^s \Z) \xrightarrow{p_j^{r_j}_*} \Z \otimes_{\Z} (\Z/q^s \Z) \xrightarrow{0_*} 0,    
+  \end{align*}
+  which is equivalent to
+  \begin{align*}
+    0 \xrightarrow{0} \Z/q^s \Z \xrightarrow{p_j^{r_j}} \Z/q^s \Z \xrightarrow{0} 0.
+  \end{align*}
+  Thus
+  \begin{align*}
+    Tor_{\Z}^0(\Z/p_j^{r_j}\Z, \Z/q^s\Z) &= \ker(p_j^{r_j})/\im(0) \\
+    &= 0/0 \\
+    &= 0
+  \end{align*}
+  and
+  \begin{align*}
+    Tor_{\Z}^1(\Z/p_j^{r_j}\Z, \Z/q^s\Z) &= \ker(0)/\im(p_j^{r_j}) \\
+    &= (\Z/q^s\Z)/(\Z/q^s\Z) \\
+    &= 0 
+  \end{align*}
+  \begin{align*}
+    Tor_{\Z}^i(\Z/p_j^{r_j}\Z, \Z/q^s\Z) = 0
+  \end{align*}
+  Thus, we have
+  \begin{align*}
+    &Tor_{\Z}^i(\Z^r \oplus \bigoplus\limits_{j=1}^n \Z/p_j^{r_j}\Z, \Z/q^s\Z)  \\
+    &= Tor_{\Z}^i(\Z, \Z/q^s\Z)^r \oplus \bigoplus\limits_{j=1}^n Tor_{\Z}^i(\Z/p_j^{r_j}\Z, \Z/q^s\Z) \\
+    &= \bigoplus\limits_{j=1}^n Tor_{\Z}^i(\Z/p_j^{r_j}\Z, \Z/q^s\Z) \\
+    &= 
+    \begin{cases}
+      \text { if } \forall j, q \neq p_j & 0 \\
+      \text { otherwise } & Tor_{\Z}^i(\Z/p_j^{r_j}\Z, \Z/p_j^s\Z)
+    \end{cases}
+  \end{align*}
+  Thus, we have
+  \begin{align*}
+    &Tor_{\Z}^0(\Z^r \oplus \bigoplus\limits_{j=1}^n \Z/p_j^{r_j}\Z, \Z/q^s\Z)  \\
+    &=
+    \begin{cases}
+      \text { if } \forall j, q \neq p_j & 0 \\
+      \text { otherwise } & Tor_{\Z}^i(\Z/p_j^{r_j}\Z, \Z/p_j^s\Z)
+    \end{cases}
   \end{align*}
 \end{proof}
 \end{document}
